--- a/views/addpage.html
+++ b/views/addpage.html
@@ -5,20 +5,42 @@
   <hr>
   <form method="POST" action="/wiki/">
     
-    <div>PLACEHOLDER FOR AUTHOR NAME FIELD</div>
-    
-    <div>PLACEHOLDER FOR AUTHOR EMAIL FIELD</div>
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Author Name</label>
+      <div class="col-sm-10">
+        <input name="authorName" type="text" class="form-control"/>
+      </div>
+    </div>    
+
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Author Email</label>
+      <div class="col-sm-10">
+        <input name="authorEmail" type="email" class="form-control"/>
+      </div>
+    </div>  
     
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
       <div class="col-sm-10">
-        <input name="title" type="text" class="form-control"/>
+        <input name="pageTitle" type="text" class="form-control"/>
       </div>
     </div>
     
-    <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div>
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Page Content</label>
+      <div class="col-sm-10">
+        <textarea name="pageContent" rows="4" cols="50">
+        Enter your page content
+        </textarea>
+      </div>
+    </div>
     
-    <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div>
+    <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Page Status</label>
+      <div class="col-sm-10">
+        <input name="pageStatus" type="text" class="form-control"/>
+      </div>
+    </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
